--- a/server/package.json
+++ b/server/package.json
@@ -13,6 +13,7 @@
     "typescript": "^5"
   },
   "dependencies": {
+    "agora-token": "^2.0.5",
     "zod": "^3.25.67",
     "zod_utilz": "^0.8.4"
   }
