--- a/server/package.json
+++ b/server/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "agora-token": "^2.0.5",
+    "pino": "^9.7.0",
     "zod": "^3.25.67",
     "zod_utilz": "^0.8.4"
   }
