--- a/app/package.json
+++ b/app/package.json
@@ -13,10 +13,12 @@
     "@tailwindcss/vite": "^4.1.11",
     "@tanstack/react-query": "^5.81.5",
     "agora-rtc-react": "^2.4.0",
+    "jotai": "^2.12.5",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-use-websocket": "^4.13.0",
-    "tailwindcss": "^4.1.11"
+    "tailwindcss": "^4.1.11",
+    "zod": "^3.25.71"
   },
   "devDependencies": {
     "@eslint/js": "^9.29.0",
