--- a/app/package.json
+++ b/app/package.json
@@ -10,15 +10,21 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/react-icons": "^1.3.2",
+    "@radix-ui/react-navigation-menu": "^1.2.13",
+    "@react-three/drei": "^10.5.0",
+    "@react-three/fiber": "^9.2.0",
     "@tanstack/react-pacer": "^0.8.0",
     "@tanstack/react-query": "^5.81.5",
     "agora-rtc-react": "^2.4.0",
     "jotai": "^2.12.5",
+    "maath": "^0.10.8",
     "next": "^15.3.5",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-use-websocket": "^4.13.0",
     "tailwindcss": "^4.1.11",
+    "three": "^0.178.0",
     "zod": "^3.25.71"
   },
   "devDependencies": {
