--- a/libs/path-finder/tsconfig.json
+++ b/libs/path-finder/tsconfig.json
@@ -19,6 +19,7 @@
     "skipLibCheck": true,
     "noFallthroughCasesInSwitch": true,
     "noUncheckedIndexedAccess": true,
+    "experimentalDecorators": true,
 
     // Some stricter flags (disabled by default)
     "noUnusedLocals": false,
