--- a/app/package.json
+++ b/app/package.json
@@ -10,16 +10,20 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@formatjs/intl-localematcher": "^0.6.1",
     "@radix-ui/react-icons": "^1.3.2",
     "@radix-ui/react-navigation-menu": "^1.2.13",
     "@react-three/drei": "^10.5.0",
     "@react-three/fiber": "^9.2.0",
     "@tanstack/react-pacer": "^0.8.0",
     "@tanstack/react-query": "^5.81.5",
+    "@types/negotiator": "^0.6.4",
     "agora-rtc-react": "^2.4.0",
     "jotai": "^2.12.5",
     "maath": "^0.10.8",
+    "negotiator": "^1.0.0",
     "next": "^15.3.5",
+    "next-intl": "^4.3.4",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-use-websocket": "^4.13.0",
