--- a/app/package.json
+++ b/app/package.json
@@ -19,14 +19,19 @@
     "@tanstack/react-query": "^5.81.5",
     "@types/negotiator": "^0.6.4",
     "agora-rtc-react": "^2.4.0",
+    "clsx": "^2.1.1",
     "jotai": "^2.12.5",
+    "leaflet": "^1.9.4",
+    "leaflet-defaulticon-compatibility": "^0.1.2",
     "maath": "^0.10.8",
     "negotiator": "^1.0.0",
     "next": "^15.3.5",
     "next-intl": "^4.3.4",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-leaflet": "^5.0.0",
     "react-use-websocket": "^4.13.0",
+    "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.11",
     "three": "^0.178.0",
     "zod": "^3.25.71"
@@ -34,6 +39,7 @@
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.11",
     "@tanstack/eslint-plugin-query": "^5.81.2",
+    "@types/leaflet": "^1.9.20",
     "@types/node": "^24.0.12",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
