--- a/app/package.json
+++ b/app/package.json
@@ -24,6 +24,7 @@
     "leaflet": "^1.9.4",
     "leaflet-defaulticon-compatibility": "^0.1.2",
     "maath": "^0.10.8",
+    "motion": "^12.23.6",
     "negotiator": "^1.0.0",
     "next": "^15.3.5",
     "next-intl": "^4.3.4",
