--- a/.github/workflows/vercel-production.yml
+++ b/.github/workflows/vercel-production.yml
@@ -1,13 +1,19 @@
 name: Vercel Production Deployment
+
+permissions:
+  contents: read
+
 env:
   VERCEL_ORG_ID: ${{ secrets.VERCEL_ORG_ID }}
   VERCEL_PROJECT_ID: ${{ secrets.VERCEL_PROJECT_ID }}
+
 on:
   push:
     branches:
       - production
     paths:
       - app/**
+
 jobs:
   Deploy-Production:
     runs-on: ubuntu-latest
