--- a/app/package.json
+++ b/app/package.json
@@ -17,6 +17,8 @@
     "@react-three/fiber": "^9.2.0",
     "@tanstack/react-pacer": "^0.8.0",
     "@tanstack/react-query": "^5.81.5",
+    "@trpc/client": "^11.4.3",
+    "@trpc/tanstack-react-query": "^11.4.3",
     "@types/negotiator": "^0.6.4",
     "agora-rtc-react": "^2.4.0",
     "clsx": "^2.1.1",
