--- a/app/tsconfig.json
+++ b/app/tsconfig.json
@@ -19,10 +19,12 @@
     ],
     "baseUrl": ".",
     "paths": {
-      "@/*": ["src/*"]
+      "@/*": ["src/*"],
+      "@server/*": ["../server/src/exports/*"]
     },
     "target": "ES2017"
   },
+  "references": [{ "path": "../server" }],
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
   "exclude": ["node_modules"]
 }
