--- a/server/package.json
+++ b/server/package.json
@@ -15,11 +15,19 @@
     "typescript": "^5"
   },
   "dependencies": {
+    "@fastify/cors": "^11.0.1",
+    "@trpc/server": "^11.4.3",
     "agora-token": "^2.0.5",
-    "bufferutil": "^4.0.9",
+    "fastify": "^5.4.0",
+    "fastify-socket.io": "^5.1.0",
     "pino": "^9.7.0",
+    "socket.io": "^4.8.1",
     "ws": "^8.18.3",
     "zod": "^3.25.67",
     "zod_utilz": "^0.8.4"
+  },
+  "optionalDependencies": {
+    "bufferutil": "^4.0.9",
+    "utf-8-validate": "^6.0.5"
   }
 }
