--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -10,9 +10,7 @@
 
     // Bundler mode
     "moduleResolution": "bundler",
-    "allowImportingTsExtensions": true,
     "verbatimModuleSyntax": true,
-    "noEmit": true,
 
     // Best practices
     "strict": true,
@@ -23,6 +21,12 @@
     // Some stricter flags (disabled by default)
     "noUnusedLocals": false,
     "noUnusedParameters": false,
-    "noPropertyAccessFromIndexSignature": false
+    "noPropertyAccessFromIndexSignature": false,
+    "composite": true,
+
+    // Path
+    "paths": {
+      "@/*": ["./src/*"]
+    }
   }
 }
