all migrations done

--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -26,7 +26,8 @@
 
     // Path
     "paths": {
-      "@/*": ["./src/*"]
+      "@/*": ["./src/*"],
+      "@config/*": ["./config/*"]
     }
   }
 }
