--- a/app/package.json
+++ b/app/package.json
@@ -34,6 +34,7 @@
     "react-dom": "^19.1.0",
     "react-leaflet": "^5.0.0",
     "react-use-websocket": "^4.13.0",
+    "socket.io-client": "^4.8.1",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.11",
     "three": "^0.178.0",
