--- a/app/package.json
+++ b/app/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@formatjs/intl-localematcher": "^0.6.1",
+    "@hookform/resolvers": "^5.1.1",
     "@radix-ui/react-icons": "^1.3.2",
     "@radix-ui/react-navigation-menu": "^1.2.13",
     "@react-three/drei": "^10.5.0",
@@ -21,6 +22,7 @@
     "@trpc/tanstack-react-query": "^11.4.3",
     "@types/negotiator": "^0.6.4",
     "agora-rtc-react": "^2.4.0",
+    "better-auth": "^1.3.3",
     "clsx": "^2.1.1",
     "jotai": "^2.12.5",
     "leaflet": "^1.9.4",
@@ -32,6 +34,7 @@
     "next-intl": "^4.3.4",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-hook-form": "^7.60.0",
     "react-leaflet": "^5.0.0",
     "react-use-websocket": "^4.13.0",
     "socket.io-client": "^4.8.1",
