--- a/server/.gitignore
+++ b/server/.gitignore
@@ -34,5 +34,5 @@ report.[0-9]_.[0-9]_.[0-9]_.[0-9]_.json
 # Finder (MacOS) folder config
 .DS_Store
 
-# Prisma
-/db
+# Prisma database files
+/prisma/*.db
