--- a/server/package.json
+++ b/server/package.json
@@ -4,12 +4,14 @@
   "type": "module",
   "private": true,
   "scripts": {
-    "dev": "bun run src/index.ts"
+    "dev": "bun run src/index.ts",
+    "better-auth:generate": "bunx @better-auth/cli generate --config src/lib/auth.ts --output=./prisma/models/auth.prisma"
   },
   "prisma": {
-    "schema": "prisma/schema.prisma"
+    "schema": "./prisma"
   },
   "devDependencies": {
+    "@better-auth/cli": "^1.3.3",
     "@types/bun": "latest",
     "@types/node": "^24.0.13",
     "@types/ws": "^8.18.1",
@@ -23,6 +25,7 @@
     "@prisma/client": "^6.12.0",
     "@trpc/server": "^11.4.3",
     "agora-token": "^2.0.5",
+    "better-auth": "^1.3.2",
     "fastify": "^5.4.0",
     "fastify-socket.io": "^5.1.0",
     "pino": "^9.7.0",
