--- a/app/package.json
+++ b/app/package.json
@@ -7,7 +7,9 @@
     "dev": "next dev --port 3001",
     "build": "next build",
     "start": "next start --port 3002",
-    "lint": "next lint"
+    "lint": "next lint",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build"
   },
   "dependencies": {
     "@formatjs/intl-localematcher": "^0.6.1",
@@ -44,6 +46,8 @@
     "zod": "^3.25.71"
   },
   "devDependencies": {
+    "@storybook/addon-styling-webpack": "^2.0.0",
+    "@storybook/nextjs": "^9.0.18",
     "@tailwindcss/postcss": "^4.1.11",
     "@tanstack/eslint-plugin-query": "^5.81.2",
     "@types/leaflet": "^1.9.20",
@@ -52,8 +56,10 @@
     "@types/react-dom": "^19.1.6",
     "eslint": "^9.29.0",
     "eslint-config-next": "^15.3.5",
+    "eslint-plugin-storybook": "^9.0.18",
     "globals": "^16.2.0",
     "postcss": "^8.5.6",
+    "storybook": "^9.0.18",
     "typescript": "~5.8.3"
   }
 }
