--- a/app/package.json
+++ b/app/package.json
@@ -34,6 +34,7 @@
     "negotiator": "^1.0.0",
     "next": "^15.3.5",
     "next-intl": "^4.3.4",
+    "rc-joystick": "^1.1.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-hook-form": "^7.60.0",
